[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://enemic2/enemic_2.gd" type="Script" id=2]
[ext_resource path="res://enemic2/bales.gd" type="Script" id=3]
[ext_resource path="res://lletres/Scratch Boys.ttf" type="DynamicFontData" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "caminant",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 198.603, 137.085 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 756.586, 201.525 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 912.923, 209.305 )

[node name="Node2D" type="Node2D"]
position = Vector2( 775.017, 850.759 )

[node name="enemic_2" type="KinematicBody2D" parent="."]
position = Vector2( -749.13, -866.803 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="enemic_2"]
position = Vector2( 293.41, 15.2173 )
scale = Vector2( 5.76408, 4.60259 )
frames = SubResource( 1 )
animation = "caminant"

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemic_2"]
position = Vector2( 294.165, 8.3949 )
rotation = 0.0107644
shape = SubResource( 2 )

[node name="timer_bala" type="Timer" parent="enemic_2"]
wait_time = 3.0

[node name="vida" type="Label" parent="enemic_2"]
margin_left = 100.683
margin_top = -408.159
margin_right = 478.683
margin_bottom = -228.159
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="radar_dret" type="Area2D" parent="."]
position = Vector2( -749.13, -866.803 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="radar_dret"]
position = Vector2( 1265.22, -7.48549 )
shape = SubResource( 4 )

[node name="radar_esq" type="Area2D" parent="."]
position = Vector2( -749.13, -866.803 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="radar_esq"]
position = Vector2( -845.261, 8.43007 )
shape = SubResource( 5 )

[node name="bales" type="Node" parent="."]
script = ExtResource( 3 )
[connection signal="timeout" from="enemic_2/timer_bala" to="enemic_2" method="_on_timer_bala_timeout"]
[connection signal="body_entered" from="radar_dret" to="enemic_2" method="_on_radar_dret_body_entered"]
[connection signal="body_entered" from="radar_esq" to="enemic_2" method="_on_radar_esq_body_entered"]
